--- a/Assets/StreamingAssets/ReportTempleteWithoutLog.html
+++ b/Assets/StreamingAssets/ReportTempleteWithoutLog.html
@@ -12,8 +12,8 @@
 	<div id="TestInfo"></div>
 	<h2>设备信息</h2>
 	<div id="Device"></div>
-	<h2>折线图</h2>
-	<div id="LineTable1" style="width: 1500px;height:600px;"></div>
+	<!-- <h2>折线图</h2> -->
+	<!-- <div id="LineTable1" style="width: 1500px;height:600px;"></div> -->
 	<h2>性能报告</h2>
 	<div id="MonitorFrame" style="width: 1500px;height: 600px;"></div>
 	<div id="MonitorBattery" style="width: 1500px;height: 600px;"></div>
@@ -55,63 +55,67 @@
                 txtDiv.innerHTML = innerText;
             }
         }
-		var base = +new Date(2014, 9, 3);
-		var oneDay = 24 * 3600 * 1000;
-		var date = [];
-		var data = [Math.random() * 150];
-		var now = new Date(base);
-		function addData(shift) {
-		    now = [now.getFullYear(), now.getMonth() + 1, now.getDate()].join('/');
-		    date.push(now);
-		    data.push((Math.random() - 0.4) * 10 + data[data.length - 1]);
-		    if (shift) {
-		        date.shift();
-		        data.shift();
-		    }
-		    now = new Date(+new Date(now) + oneDay);
-		}
-		for (var i = 1; i < 100; i++) {
-		    addData();
-		}
-		option = {
-		    xAxis: {
-		        type: 'category',
-		        boundaryGap: false,
-		        data: date
-		    },
-		    yAxis: {
-		        boundaryGap: [0, '50%'],
-		        type: 'value'
-		    },
-		    series: [
-		        {
-		            name:'成交',
-		            type:'line',
-		            smooth:true,
-		            symbol: 'none',
-		            stack: 'a',
-		            areaStyle: {
-		                normal: {}
-		            },
-		            data: data
-		        }
-		    ]
-		};
-		setInterval(function () {
-		    addData(true);
-		    myChart.setOption({
-		        xAxis: {
-		            data: date
-		        },
-		        series: [{
-		            name:'成交',
-		            data: data
-		        }]
-		    });
-		}, 500);
-        // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('LineTable1'));
-        myChart.setOption(option)
+		
+		
+		<!-- var base = +new Date(2014, 9, 3); -->
+		<!-- var oneDay = 24 * 3600 * 1000; -->
+		<!-- var date = []; -->
+		<!-- var data = [Math.random() * 150]; -->
+		<!-- var now = new Date(base); -->
+		<!-- function addData(shift) { -->
+		    <!-- now = [now.getFullYear(), now.getMonth() + 1, now.getDate()].join('/'); -->
+		    <!-- date.push(now); -->
+		    <!-- data.push((Math.random() - 0.4) * 10 + data[data.length - 1]); -->
+		    <!-- if (shift) { -->
+		        <!-- date.shift(); -->
+		        <!-- data.shift(); -->
+		    <!-- } -->
+		    <!-- now = new Date(+new Date(now) + oneDay); -->
+		<!-- } -->
+		<!-- for (var i = 1; i < 100; i++) { -->
+		    <!-- addData(); -->
+		<!-- } -->
+		<!-- option = { -->
+		    <!-- xAxis: { -->
+		        <!-- type: 'category', -->
+		        <!-- boundaryGap: false, -->
+		        <!-- data: date -->
+		    <!-- }, -->
+		    <!-- yAxis: { -->
+		        <!-- boundaryGap: [0, '50%'], -->
+		        <!-- type: 'value' -->
+		    <!-- }, -->
+		    <!-- series: [ -->
+		        <!-- { -->
+		            <!-- name:'成交', -->
+		            <!-- type:'line', -->
+		            <!-- smooth:true, -->
+		            <!-- symbol: 'none', -->
+		            <!-- stack: 'a', -->
+		            <!-- areaStyle: { -->
+		                <!-- normal: {} -->
+		            <!-- }, -->
+		            <!-- data: data -->
+		        <!-- } -->
+		    <!-- ] -->
+		<!-- }; -->
+		<!-- setInterval(function () { -->
+		    <!-- addData(true); -->
+		    <!-- myChart.setOption({ -->
+		        <!-- xAxis: { -->
+		            <!-- data: date -->
+		        <!-- }, -->
+		        <!-- series: [{ -->
+		            <!-- name:'成交', -->
+		            <!-- data: data -->
+		        <!-- }] -->
+		    <!-- }); -->
+		<!-- }, 500); -->
+        <!-- // 基于准备好的dom，初始化echarts实例 -->
+        <!-- var myChart = echarts.init(document.getElementById('LineTable1')); -->
+        <!-- myChart.setOption(option) -->
+		
+		
 		var frameIndexArrayData = [];
 		var frameArrayData = [];
 		var batteryArrayData = [];
